# gobject-example-rs

./: .gitmodules  Cargo.toml  Makefile  meson.build
gobjectrs.meson/: README.md  meson.build
gobjectrs.meson/scripts/: cargo_wrapper.py
include/gobject-example/: ex.h
src/bar/: imp.rs
src/color/: imp.rs  mod.rs
src/flags/: imp.rs  mod.rs
src/foo/: imp.rs  mod.rs
src/nameable/: imp.rs  mod.rs
src/rstring/: imp.rs
src/shared_rstring/: imp.rs
tests/: meson.build
